--- a/docs/7-prioritering.adoc
+++ b/docs/7-prioritering.adoc
@@ -5,6 +5,6 @@
 
 Prioriteringen av hvilke datasett som bør kartlegges og beskrives avhenger av hvilke drivere en har for å jobbe med orden i eget hus. Vi har her tatt utgangspunkt i behovet for deling, men det kan være andre faktorer som er viktige avhengig av hvilke mål som skal oppfylles.
 
-image::images/Prioritering.png[]
+image::Prioritering.jpg[]
 
 Figur 1: Prioritering av datasett
