--- a/locale/attributes-nb.adoc
+++ b/locale/attributes-nb.adoc
@@ -16,7 +16,7 @@ ifdef::preface-title[:preface-title: Forord]
 //:section-refsig: ???
 :table-caption: Tabell
 :tip-caption: Tips
-:toc-title: Innhold
 :untitled-label: Navnløs
 :version-label: Versjon
 :warning-caption: Advarsel
+:toc-title: Innholdsfortegnelse
