--- a/4-mandat.adoc
+++ b/4-mandat.adoc
@@ -3,7 +3,7 @@
 
 Å sikre forankring kan være krevende. Start med å skape forståelse i egen organisasjon for behovet for å få orden i eget hus.
 
-Kontakt ledere og sentrale fagressurser i linjen og i prosjekter, og vis til hva https://www.regjeringen.no/no/dokumenter/meld.-st.-27-20152016/id2483795/[Digital agenda ]sier om å holde orden i eget hus og hva https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2569983/[Digitaliseringsrundskrivet] sier om tilrettelegging for gjenbruk og viderebruk av informasjon.  Disse kildene omtaler både samfunnsnytte og gevinster man kan oppnå i egen virksomhet som følge av arbeidet.
+Kontakt ledere og sentrale fagressurser i linjen og i prosjekter, og vis til hva https://www.regjeringen.no/no/dokumenter/en-digital-offentlig-sektor/id2653874/[Digitaliseringsstrategien] sier om å holde orden i eget hus og hva https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2683652/[Digitaliseringsrundskrivet] sier om tilrettelegging for gjenbruk og viderebruk av informasjon.  Disse kildene omtaler både samfunnsnytte og gevinster man kan oppnå i egen virksomhet som følge av arbeidet.
 
 Informasjonsforvaltning kan være et vanskelig tema å formidle. Del derfor gjerne arbeidet med å få orden i eget hus opp i håndterbare og konkrete aktiviteter slik at det blir lettere å forstå og ta eierskap til arbeidet. Man kan for eksempel dele arbeidet opp i begrepsarbeid, informasjonsmodellering, registrering av datasett og etablering av API’er.
 
@@ -13,6 +13,6 @@ Sørg for at sentrale fagressurser blir involvert i beskrivelsen av punktene i f
 
 Ta kontakt med andre etater for å bli kjent med andre sine erfaringer. Etatene som har vært med i SKATE- arbeidet har for eksempel vært villig til å dele informasjon om prosesser, organisering av arbeid, rammeverk og  bruk av verktøy.
 
-Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på https://www.difi.no/opplaeringstilbud/kommende-arrangementer[Difi sin arrangementsoversikt]. Difi arrangerer også møter i https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning[faglig arena for informasjonsforvaltning] som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.
+Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på https://https://www.digdir.no/arrangement/arrangementsoversikt/692?field_end_date_value=1[Digitaliseringsdirektoratet sin arrangementsoversikt]. Digitaliseringsdirektoratet arrangerer også møter i https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning[faglig arena for informasjonsforvaltning] som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.
 
-Ta gjerne kontakt med Difi eller Brønnøysundregistrene footnote:[Brreg: https://www.brreg.no/hvordan-kan-vi-hjelpe-deg/ Difi: informasjonsforvaltning@difi.no] hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.
+Ta gjerne kontakt med Digitaliseringsdirektoratet eller Brønnøysundregistrene footnote:[Digitaliseringsdirektoratet: informasjonsforvaltning@digdir.no] hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.
