--- a/docs/2-oppbygging.adoc
+++ b/docs/2-oppbygging.adoc
@@ -1,7 +1,7 @@
 
 === Oppbygging av veilederen
 
-I Difis rapport https://www.difi.no/sites/difino/files/rapport-informasjonsforvaltning-i-offentleg-sektor-2013-10-10.pdf["Informasjonsforvaltning i offentlig sektor"] defineres informasjonsforvaltning slik:
+I Digitaliseringsdirektoratets rapport https://www.digdir.no/sites/sogn/files/2020-12/rapport-informasjonsforvaltning-i-offentleg-sektor-2013-10-10.pdf["Informasjonsforvaltning i offentlig sektor"] defineres informasjonsforvaltning slik:
 
 “Informasjonsforvaltning betyr eit heilskapleg syn på aktivitetar, verktøy og andre tiltak for å sikre best mogleg kvalitet, utnytting og sikring av informasjon i ei verksemd. Organiseringa av informasjonen skal vere systematisk og henge saman med verksemda sine arbeidsprosessar”.
 
