--- a/docs/4-mandat.adoc
+++ b/docs/4-mandat.adoc
@@ -13,6 +13,6 @@ Sørg for at sentrale fagressurser blir involvert i beskrivelsen av punktene i f
 
 Ta kontakt med andre etater for å bli kjent med andre sine erfaringer. Etatene som har vært med i SKATE- arbeidet har for eksempel vært villig til å dele informasjon om prosesser, organisering av arbeid, rammeverk og  bruk av verktøy.
 
-Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på https://https://www.digdir.no/arrangement/arrangementsoversikt/692?field_end_date_value=1[Digitaliseringsdirektoratet sin arrangementsoversikt]. Digitaliseringsdirektoratet arrangerer også møter i https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning[faglig arena for informasjonsforvaltning] som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.
+Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på https://www.digdir.no/arrangement/arrangementsoversikt/692?field_end_date_value=1&field_global_taxonomy_target_id=All[Digitaliseringsdirektoratet sin arrangementsoversikt]. Digitaliseringsdirektoratet arrangerer også møter i https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning[faglig arena for informasjonsforvaltning] som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.
 
-Ta gjerne kontakt med Digitaliseringsdirektoratet eller Brønnøysundregistrene footnote:[Digitaliseringsdirektoratet: informasjonsforvaltning@digdir.no] hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.
+Ta gjerne kontakt med Digitaliseringsdirektoratet footnote:[Digitaliseringsdirektoratet: informasjonsforvaltning@digdir.no] hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.
