--- a/docs/8-tilgangsnivå.adoc
+++ b/docs/8-tilgangsnivå.adoc
@@ -42,4 +42,4 @@ Det kreves særskilt rettslig grunnlag for å få tilgang til datasettet. Typisk
 
 Formålet med kategorien unntatt offentlighet er å kunne skille ut data som kun kan deles på særskilt rettslig grunnlag.
 
-Uansett hvordan du klassifiserer datasettet, er det viktig å spesifisere hvilken hjemmel som ligger til grunn for innsamlingen og bruken av datasettet. Vurderingen går også her ut på om deler av et begrenset datasett likevel kan gjøres tilgjengelig som “grønne” data. Det som klassifiseres som rødt, skal likevel beskrives og beskrivelsene tilgjengeliggjøres i Felles datakatalog. footnote:[Publisere i Felles datakatalog:https://data.norge.no/publishing] Behovet for å vite hva begrensningene for bruken av et datasett er, er viktig for den som skal vurderer å ta i bruk et datasett. Derfor bør du også henvise til den lovformuleringen med hjemmel og formål som regulerer bruken av datasettet, for eksempel i Lovdata. Se ellers https://doc.difi.no/data/spesifikasjon-for-beskrivelse-av-formal-og-hjemmel/[spesifikasjon for beskrivelse av formål og hjemmel.]
+Uansett hvordan du klassifiserer datasettet, er det viktig å spesifisere hvilken hjemmel som ligger til grunn for innsamlingen og bruken av datasettet. Vurderingen går også her ut på om deler av et begrenset datasett likevel kan gjøres tilgjengelig som “grønne” data. Det som klassifiseres som rødt, skal likevel beskrives og beskrivelsene tilgjengeliggjøres i Felles datakatalog. footnote:[Publisere i Felles datakatalog: https://data.norge.no/publishing] Behovet for å vite hva begrensningene for bruken av et datasett er, er viktig for den som skal vurderer å ta i bruk et datasett. Derfor bør du også henvise til den lovformuleringen med hjemmel og formål som regulerer bruken av datasettet, for eksempel i Lovdata. Se ellers https://data.norge.no/specification/spesifikasjon-for-beskrivelse-av-formal-og-hjemmel/[spesifikasjon for beskrivelse av formål og hjemmel.]
