deploy: 70b4f55a0829eb01d17b0ca58d04a774ea10042c

--- a/6-kartlegging.adoc
+++ b/6-kartlegging.adoc
@@ -5,8 +5,6 @@
 
 Et datasett er en organisert samling av data. Hvordan et datasett avgrenses og organiseres vil imidlertid variere mellom ulike virksomheter. Det kan gjøres ulike valg f.eks. mht. hvilke datasett som skal spesifiseres i forbindelse med en saksbehandling eller trekkes ut av en database eller et register (se https://www.difi.no/artikkel/2016/06/erfaringer-med-bestemme-hva-et-datasett-er-og-hvilke-datasett-som-skal-beskrives[Brønnøysundregistrenes tanker rundt dette]).
 
-I ordforklaringene til https://doc.difi.no/dcat-ap-no/[“Standard for beskrivelse av datasett og datakataloger (DCAT-AP-NO)”] bruker en den litt mer IT-pregede definisjonen “Et datasett er en samling med data, for eksempel i form av en tabell, liste eller en database som kan gjøres tilgjengelig som en nedlastbar fil, og/eller nåes via et Web-API.”
-
 Det er i utgangspunktet opp til virksomheten, ut fra gitte formål, å definere hvilke datasett som er relevant å beskrive, og mange vil ha lovverk og retningslinjer som sier noe om dette. Imidlertid fokuserer veilederen på datadeling, dermed kan en grovt sett si at alle datasett som virksomheten kan dele med andre, er relevant å beskrive.
 
 ==== Hvor starter jeg?
@@ -18,7 +16,7 @@ Det kan være vanskelig å vurdere hva som er samling av data og dermed hvor sto
 
 For noen vil det sannsynligvis være hensiktsmessig å ta for seg ulike arbeidsprosesser (f.eks. knyttet til forskjellige typer saksbehandling), og identifisere og beskrive datasett for én og én prosess. Andre måter å avgrense på kan være ut fra hjemmelsgrunnlag, overordnet, tematisk/faglig område, eller også data knyttet til tjenester. Ved utvikling av nye løsninger kartlegges gjerne informasjonsarkitekturen as-is og to-be i ny løsning. Dette er et godt utgangspunkt for å kartlegge datasett og gjøre data fra tjenesten maskinlesbart tilgjengelig. Dersom en har datasett som både brukes internt (av andre deler av virksomheten enn de som forvalter datasettene), og eksternt, bør en prioritere å starte med disse som vil gi gevinst for både egen og andre virksomheter.
 
-Avgrensninger av datasett kan være avhengig av bruksområde. Datasett kan være delmengde av andre datasett og omvendt. I DCAT-AP-NO er det flere felt som kan brukes for å beskrive relasjoner mellom datasett. De to mest åpenbare er: https://doc.difi.no/dcat-ap-no/#datasett-er-del-av[Datasett: er del av] og https://doc.difi.no/dcat-ap-no/#datasett-har-del[Datasett: har del.]
+Avgrensninger av datasett kan være avhengig av bruksområde. Datasett kan være delmengde av andre datasett og omvendt. Et datasett A kan være en delmengde av et datasett B. Og datasett B kan ineholde delmengder av datasett D og E. I DCAT-AP-NO er det derfor flere felt som kan brukes for å beskrive relasjoner mellom datasett. De to mest åpenbare er: https://data.norge.no/specification/dcat-ap-no/#Datasett-erDelAv[Datasett: er del av] og https://data.norge.no/specification/dcat-ap-no/#Datasett-harDel[Datasett: har del].
 
 Eksempler på avgrensing av et datasett:
 
@@ -31,9 +29,9 @@ Eksempler på avgrensing av et datasett:
 * Vernepliktige er etter lov om verneplikt en del av Forsvarets verneplikts- og tjenesteregister.
 
 
-Det kan oppstå behov for å definere begrep i kartleggingsfasen og i et utviklingsprosjekt, og vi anbefaler at disse forvaltes i en felles begrepskatalog for virksomheten med tydelige forvaltningsprosesser definert (mer om dette i kapittelet om Styring og forvaltning). Begrepene bør være definert i henhold til angitt https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/standarder/standarder/standard-begrepsbeskrivelser[standard]. Målet på sikt er at etatenes begreper har en https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/standarder/referansekatalogen/pekere-til-offentlige-ressurser-pa-nett[unik identifikator] som gjør at begrepet er en felles ressurs som kan pekes til og gjenbrukes på tvers av offentlig forvaltning. F.eks  fra både intern og felles datakatalog og i definerte informasjonsmodeller.
+Det kan oppstå behov for å definere begrep i kartleggingsfasen og i et utviklingsprosjekt, og vi anbefaler at disse forvaltes i en felles begrepskatalog for virksomheten med tydelige forvaltningsprosesser definert (mer om dette i kapittelet om Styring og forvaltning). Begrepene bør være definert i henhold til angitt https://www.digdir.no/digitalisering-og-samordning/omgrepsanalyse-og-definisjonsarbeid/1483[standard]. Målet på sikt er at etatenes begreper har en https://www.digdir.no/digitale-felleslosninger/pekere-til-offentlige-ressurser-pa-nett/1492[unik identifikator] som gjør at begrepet er en felles ressurs som kan pekes til og gjenbrukes på tvers av offentlig forvaltning. F.eks. fra både virksomhetsintern og felles datakatalog og i definerte informasjonsmodeller.
 
-Tar en for seg å beskrive ulike arbeidsprosesser anbefaler https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/arkitekturbegreper[Difi]  at man benytter Archimate og BPMN som felles modelleringsspråk (notasjon). Archimate (ArchiMate - architecture modeling language)  er en de-facto standard for beskrivelse av arkitektur og representerer en visuell måte å beskrive arkitekturobjekter med relasjoner i form av modeller.  Språket og modellene kan brukes for å kommunisere, designe og vurdere arkitektur.  BPMN (Business Process and Modelling Notation) brukes for prosessbeskrivelser.
+Tar en for seg å beskrive ulike arbeidsprosesser anbefaler https://www.digdir.no/nasjonal-arkitektur/rammeverk-digital-samhandling/2148 [Digitaliseringsdirektoratet] at man benytter Archimate og BPMN som felles modelleringsspråk (notasjon). Archimate (ArchiMate - architecture modeling language)  er en de-facto standard for beskrivelse av arkitektur og representerer en visuell måte å beskrive arkitekturobjekter med relasjoner i form av modeller. Språket og modellene kan brukes for å kommunisere, designe og vurdere arkitektur.  BPMN (Business Process and Modelling Notation) brukes for prosessbeskrivelser.
 
 ==== Hva er forskjellen mellom oversikt og beskrivelse?
 
