--- a/9-beskrive.adoc
+++ b/9-beskrive.adoc
@@ -3,17 +3,17 @@
 
 ==== Standard for beskrivelse av datasett - DCAT-AP-NO
 
-I 2015 besluttet Difi at https://doc.difi.no/dcat-ap-no/[“Standard for beskrivelse av datasett og datakataloger”], også kalt DCAT-AP-NO,  skal være anbefalt forvaltningsstandard. Dette er den norske versjonen av EU-standarden DCAT-AP (Data Catalog Vocabulary - Application Profile) og skal sikre at beskrivelser av offentlige data i Norge utføres på en felles, strukturert måte og i en maskinlesbar form. Kontakt informasjonsfovaltning@difi.no ved spørsmål og innspill knyttet til bruk, eller innmelding av uløste behov.
+I 2015 besluttet Difi at https://data.norge.no/specification/dcat-ap-no/[“Standard for beskrivelse av datasett, datatjenester og datakataloger”], også kalt DCAT-AP-NO,  skal være anbefalt forvaltningsstandard. Dette er den norske versjonen av EU-standarden DCAT-AP (Data Catalog Vocabulary - Application Profile) og skal sikre at beskrivelser av offentlige data i Norge utføres på en felles, strukturert måte og i en maskinlesbar form.
 
 ==== Standarder for begrepsarbeid
 
 Når det gjelder beskrivelse av begreper knyttet til data, kan det organiseres på ulike måter. https://www.difi.no/sites/difino/files/rammeverk_for_begrepsarbeidet_i_bronnoysundregistrene_v._1.0.pdf[Brønnøysundregisrene har utviklet et eget rammeverk for begrepsarbeid]. Flere virksomheter arbeider med begrepskataloger (bl.a. Brønnøysundregistrene, https://www.difi.no/sites/difino/files/retningslinjer_bk_v1.2.pdf[NAV] og Skatteetaten) der de definerer både begreper som inngår i datasett og andre begreper som er relevante i virksomhetens arbeid. Andre har valgt å konsentrere begrepsarbeidet hovedsakelig om variabler knyttet til identifiserte datasett.
 
-Det finnes i dag flere anbefalinger vedrørende begrepsarbeid i https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/standarder/referansekatalogen/begrepsanalyse-og-definisjonsarbeid[Referansekatalogen for IT-standarder i offentlig sektor]. Det finnes en https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/standarder/standarder/standard-begrepsbeskrivelser[Forvaltningsstandard for begrepsbeskrivelse ]som viser hvilke elementer som skal med når et begrep beskrives. https://www.difi.no/artikkel/2019/03/forvaltningsstandarder-maskinell-tilgjengeliggjoring-av-begrepsbeskrivelser[Tilknyttet denne er det to forvaltningsstandarder for maskinell tilgjengeliggjøring av begrepsbeskrivelser].
+Det finnes i dag flere anbefalinger vedrørende begrepsarbeid i https://www.digdir.no/digitalisering-og-samordning/referansekatalogen-it-standardar/1480[Referansekatalogen for IT-standarder i offentlig sektor]. Det finnes en https://www.digdir.no/digitale-felleslosninger/forvaltningsstandard-omgrepsbeskrivingar/1682[Forvaltningsstandard for begrepsbeskrivelse ]som viser hvilke elementer som skal med når et begrep beskrives. https://www.digdir.no/digitale-felleslosninger/forvaltningsstandarder-maskinell-tilgjengeliggjoring-av-begrepsbeskrivelser/1684[Tilknyttet denne er det to forvaltningsstandarder for maskinell tilgjengeliggjøring av begrepsbeskrivelser].
 
-I tillegg har vi https://www.difi.no/sites/difino/files/standard-for-begrepskoordinering-2013-02-13-1-.pdf[Standard for begrepskoordinering 1.0]. Standarden beskriver en prosess for å koordinere begreper mellom to eller flere parter innenfor offentlig sektor, inkludert en anbefaling om ”beste praksis”. Dette vil være særlig aktuelt i prosjekter som involverer deling av data. Selv om hovedbruken av standarden vil være knyttet til samarbeidsprosjekter mellom etater, vil standarden også være nyttig i internt arbeid med begrepskoordinering (i tilfeller der ulike deler av en virksomhet har ulike definisjoner av samme begrep). Noen forskjeller kan f.eks. skyldes at en forholder seg til ulike lovverk, andre at ulike deler av en virksomhet ikke kjenner nok til begrepsbruken hos andre og lager egne definisjoner.
+I tillegg har vi https://www.digdir.no/digitale-felleslosninger/forvaltningsstandard-omgrepsharmonisering-og-omgrepsdifferensiering/1683[Forvaltningsstandard for begrepsharmonisering og begrepsdifferensiering]. Standarden beskriver en prosess for å koordinere begreper mellom to eller flere parter innenfor offentlig sektor, inkludert en anbefaling om ”beste praksis”. Dette vil være særlig aktuelt i prosjekter som involverer deling av data. Selv om hovedbruken av standarden vil være knyttet til samarbeidsprosjekter mellom etater, vil standarden også være nyttig i internt arbeid med begrepskoordinering (i tilfeller der ulike deler av en virksomhet har ulike definisjoner av samme begrep). Noen forskjeller kan f.eks. skyldes at en forholder seg til ulike lovverk, andre at ulike deler av en virksomhet ikke kjenner nok til begrepsbruken hos andre og lager egne definisjoner.
 
-I tillegg anbefales «Termlosen» footnote:[”Termlosen – kort innføring i begrepsanalyse og terminologiarbeid” fås gratis ved henvendelse til til Språkrådet: http://www.sprakradet.no/Vi-og-vart/Publikasjoner/Termlosen/. Termene i Termlosen er igjen basert på den nordiske terminologisammenslutningen Nordterms arbeid.] som veileder i arbeidet med å analysere eksisterende begrepsbruk og komme fram til et koordinert begrepsapparat.
+Hvis en har lite forkunnskaper og begrepsarbeid kan det være greit å starte med https://www.digdir.no/digitale-felleslosninger/termlosen/1733[Termlosen- kort innføring i begrepsanalyse og terminologiarbeid] eller e-læringskurset https://www.digdir.no/informasjonsforvaltning/begrip-begrepene/1470[Begrip begrepne]!
 
 ==== Vurdering og beskrivelse av kvalitet på datasett
 
@@ -21,7 +21,7 @@ Kvaliteten på virksomhetens data påvirker hvor egnet de er til andre formål e
 
 En veiledende regel kan være at det som er bra nok for eget arbeid, også er bra nok for å dele med omverdenen. En erfaring flere har gjort seg, er at tilgjengeliggjøring fører til bedre kvalitet. Når informasjon gjøres tilgjengelig, er det flere som kan oppdage og gi tilbakemelding om potensielle feil, og eier kan rette opp disse.
 
-WARNING: Det er i tillegg utarbeidet en egen https://doc.difi.no/data/kvalitet-pa-datasett[spesifikasjon for beskrivelse av kvalitet i datasett], men i gjeldende versjon av DCAT-AP-NO er det foreløpig ikke implementert støtte for denne.
+Det er i tillegg utarbeidet en egen https://data.norge.no/specification/dqv-ap-no/[spesifikasjon for beskrivelse av kvalitet på datasett - DQV-AP-NO].Denne spesifikasjonen brukes sammen med og supplerer https://data.norge.no/specification/dcat-ap-no/[DCAT-AP-NO v.2.0+].
 
 ==== API-katalog - en oversikt over grensesnitt til data
 
