--- a/docs/23-lovverk.adoc
+++ b/docs/23-lovverk.adoc
@@ -20,4 +20,4 @@ https://lovdata.no/dokument/SF/forskrift/2004-06-25-988[Forskrift om elektronisk
 
 ==== Anbefalte og obligatoriske standarder
 
-Ved å standardisere utøves et virkemiddel for styring av hvordan vi i felleskap i offentlig sektor arbeider og tilrettelegger for deling og bruk av data. Det finnes flere anbefalte og obligatoriske standarder som bør eller skal tas i bruk av alle forvaltningsorganer. Standarder som vi peker på i denne veilederen er også henvist til fra https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/standarder/referansekatalogen[Referansekatalogen] som er en oversikt over alle obligatoriske og anbefalte standarder. Vi har laget en samleside med https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/standarder-informasjonsforvaltning[relevante standarder for informasjonsforvaltning].
+Ved å standardisere utøves et virkemiddel for styring av hvordan vi i felleskap i offentlig sektor arbeider og tilrettelegger for deling og bruk av data. Det finnes flere anbefalte og obligatoriske standarder som bør eller skal tas i bruk av alle forvaltningsorganer. Standarder som vi peker på i denne veilederen er også henvist til fra https://www.digdir.no/digitalisering-og-samordning/referansekatalogen-it-standardar/1480[Referansekatalogen] som er en oversikt over alle obligatoriske og anbefalte standarder.
